# macro-advisor

./: .gitignore  main.py  pyproject.toml
.github/workflows/: evals.yml
agents/: research_agent.py  supervisor_agent.py
src/: state.py
src/prompts/: __init__.py
src/tools/: __init__.py  tavily.py
src/tools/ecb/: ecb_constants.py  ecb_cpi.py  ecb_gdp.py  ecb_rates.py
src/tools/eurostat/: eurostat_constants.py  eurostat_employment.py  eurostat_housing.py
src/tools/ine/: __init__.py  ine_constants.py  ine_employment.py  ine_housing.py
tests/: test_ecb_cpi.py  test_ecb_gdp.py  test_eurostat_employment.py  test_ine_employment.py  test_ine_housing.py
tests/evals/: conftest.py  test_complex_query.py  test_ecb_tools_selection.py  test_employment_tools_selection.py  test_fallback_tool_selection.py  test_housing_tools_selection.py
tests/tools/: test_ecb_rates.py  test_eurostat_housing.py  test_ine_employment.py  test_tavily.py
